# onyx-android-sdk

./: .gitattributes  .gitignore  CONTEXT.md  README.md  RECOGNITION_MODULE_IMPLEMENTATION_PLAN_LEGACY.md  RECOVERY_NOTES.md  build.gradle.kts  gradle.properties  gradlew  rust-toolchain.toml  settings.gradle.kts
.github/: dependabot.yml
.github/workflows/: build.yml  docs.yml
build-logic/: build.gradle.kts  detekt-baseline-main.xml  settings.gradle.kts
build-logic/src/main/kotlin/: AndroidConvention.kt  OnyxAndroidLibraryPlugin.kt  OnyxKdocPlugin.kt  (+5 more)
config/detekt/: detekt.yml
device-validation/: .gitignore  README.md  api_surface.py  base-prerepair-classified.json  classify_api_differences.py  compare_results.py  dump_metadata.py  extract_replay.py  gen_regression_test.py  gradle.properties  guided_scenarios.py  promote_fixture.py  run-comparison.sh  settings.gradle.kts
device-validation/accepted-residuals/: base.json  device.json  pen.json
device-validation/app/: build.gradle.kts
device-validation/fixtures/automated-prerepair-noteair4c-android13/: api-surface.json  comparison.json  metadata.json  neo-pen-differential.txt  recovered.jsonl  reference.jsonl  report.md
device-validation/tests/: test_api_surface.py  test_classify_api_differences.py  test_compare_pen_snapshots.py  test_compare_results.py  test_dump_metadata.py  test_fixtures.py  test_gen_regression_test.py  test_jvm_api_contracts.py  test_mmkv_fixture.py  test_module_boundaries.py  test_module_registry.py  test_publish_central.py
docs/: API_INCOMPATIBILITIES.md  AUDIT_FINDINGS_2026-07-15.md  CORRECTNESS_REVIEW.md  DECOMPILER_DISAGREEMENTS.md  FIRMWARE_NOTEAIR4C_4_2.md  GUIDED_VALIDATION.md  KOTLIN_MIGRATION.md  NATIVE_RECOVERY.md  PEN_CORE.md  RECOGNITION_FIRMWARE_EVIDENCE.md  RECOGNITION_MODULE_IMPLEMENTATION_PLAN.md  REVIEW_FOLLOW_UPS_2026-07-16.md  STROKE_COMPATIBILITY.md  VALIDATION.md
docs/adr/: 0001-isolate-recognition-native-runtimes.md  0002-version-the-public-recognition-provider-spi.md  0003-use-host-sourced-versioned-resource-packs.md  0004-serialize-hwr-and-ocr-separate-speech.md  0005-make-raw-diagnostics-host-controlled.md  0006-identify-output-with-recognition-revisions.md
gradle/: libs.versions.toml  onyx-modules.json
onyxsdk-base/: build.gradle.kts  lint-baseline.xml
onyxsdk-base/src/main/: AndroidManifest.xml
onyxsdk-base/support/onyxsdk-baselite/: build.gradle.kts  detekt-baseline-debug.xml
onyxsdk-base/support/onyxsdk-commons-io/: build.gradle.kts
onyxsdk-device/: build.gradle.kts  lint-baseline.xml
onyxsdk-device/src/main/: AndroidManifest.xml
onyxsdk-ktx/: README.md  build.gradle.kts  detekt-baseline-release.xml
onyxsdk-pen/: build.gradle.kts  consumer-rules.pro  detekt-baseline-release.xml
onyxsdk-pen-core/: build.gradle.kts
onyxsdk-pen/native/: Cargo.toml
onyxsdk-pen/native/onyx-neo-pen/: Cargo.toml  README.md
onyxsdk-pen/native/onyx-neo-pen/src/: lib.rs
onyxsdk-pen/native/onyx-pen-touch-reader/: Cargo.toml  README.md
onyxsdk-pen/native/onyx-pen-touch-reader/fuzz/: Cargo.toml
onyxsdk-pen/native/onyx-pen-touch-reader/fuzz/fuzz_targets/: pen_manager.rs
onyxsdk-pen/native/onyx-pen-touch-reader/src/: lib.rs  state.rs
onyxsdk-pen/src/main/: AndroidManifest.xml
onyxsdk-recognition/: build.gradle.kts
onyxsdk-recognition-bom/: build.gradle.kts
onyxsdk-recognition-digital-ink-preparation/: build.gradle.kts
onyxsdk-recognition-hwr-core/: build.gradle.kts
onyxsdk-recognition-myscript-editor/: build.gradle.kts
onyxsdk-recognition-myscript-jiix/: build.gradle.kts
onyxsdk-recognition-native-runtime/: build.gradle.kts
onyxsdk-recognition-ocr-core/: build.gradle.kts
onyxsdk-recognition-paddle-v3/: build.gradle.kts
onyxsdk-recognition-soda-preparation/: build.gradle.kts
onyxsdk-recognition-speech-core/: build.gradle.kts
onyxsdk-recognition-testing/: build.gradle.kts
recovery-tests/: build.gradle.kts
samples/compose-pen/: PenCanvasSample.kt  README.md
scripts/: build-rust-android.sh  check-rust.sh  compare-pen-snapshots.py  device-pen-differential.sh  gather_error_findings.py  inspect_onyx_firmware.py  jvm_api_contracts.py  module_registry.py  pen-api-additions.json  publish_central.py  test_verify_pen_api.py  verify-pen-api.py  verify-recovery.sh  verify_ktx_public_surface.py  verify_module_boundaries.py  verify_publications.py
scripts/jvm-api-contracts/: onyxsdk-base.jsonl  onyxsdk-baselite.jsonl  onyxsdk-commons-io.jsonl  onyxsdk-device.jsonl  onyxsdk-ktx.jsonl  onyxsdk-pen-core.jsonl  onyxsdk-pen.jsonl  onyxsdk-recognition-digital-ink-preparation.jsonl  onyxsdk-recognition-hwr-core.jsonl  onyxsdk-recognition-myscript-editor.jsonl  onyxsdk-recognition-myscript-jiix.jsonl  onyxsdk-recognition-native-runtime.jsonl  onyxsdk-recognition-ocr-core.jsonl  onyxsdk-recognition-paddle-v3.jsonl  onyxsdk-recognition-soda-preparation.jsonl  onyxsdk-recognition-speech-core.jsonl  onyxsdk-recognition-testing.jsonl  onyxsdk-recognition.jsonl
scripts/native-contracts/: neo-pen.exports  pen-classes.txt  touch-reader.exports
(+1076 files in other folders)
