[workspace]
resolver = "2"
members = [
    "onyx-neo-pen",
    "onyx-pen-touch-reader",
    "onyx-pen-touch-reader/fuzz",
]
default-members = [
    "onyx-neo-pen",
    "onyx-pen-touch-reader",
]

[workspace.package]
authors = ["Harold Martin"]
homepage = "https://github.com/hbmartin/onyx-android-sdk"
license = "LGPL-3.0-only"
repository = "https://github.com/hbmartin/onyx-android-sdk"

[workspace.dependencies]
jni = { version = "0.22", default-features = false }
libc = "0.2"

# A panic that unwinds out of an `extern "system"` JNI export is undefined
# behavior on older toolchains; abort is the only sound failure mode there.
[profile.release]
panic = "abort"
