[workspace]
resolver = "2"
members = [
    "onyx-neo-pen",
    "onyx-pen-touch-reader",
    "onyx-pen-touch-reader/fuzz",
]
default-members = [
    "onyx-neo-pen",
    "onyx-pen-touch-reader",
]

[workspace.package]
authors = ["Harold Martin"]
homepage = "https://github.com/hbmartin/onyx-android-sdk"
license = "LGPL-3.0-only"
repository = "https://github.com/hbmartin/onyx-android-sdk"

[workspace.dependencies]
jni = { version = "0.22", default-features = false }
libc = "0.2"

# JNI exports catch every panic before it reaches the ABI boundary and convert
# it into NativeRendererException. Unwind support is therefore required.
[profile.release]
panic = "unwind"
