[package]
name = "onyx-neo-pen"
version = "1.5.4-recovered"
edition = "2021"
description = "Source-native Rust reconstruction of libneo_pen.so"
authors.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[lib]
name = "neo_pen"
crate-type = ["cdylib", "rlib"]

[dependencies]
jni.workspace = true
