[package]
name = "onyx-neo-pen"
version = "1.5.4-recovered"
edition = "2021"
description = "Modern Rust renderer shared by libneopen_jni.so and the libneo_pen.so compatibility facade"
authors.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[lib]
name = "neopen_jni"
crate-type = ["cdylib", "rlib"]

[dependencies]
jni.workspace = true
