[package]
name = "onyx-pen-touch-reader"
version = "1.5.4-recovered"
edition = "2021"
license = "LicenseRef-Recovered-From-Binary"
description = "Behavioral Rust recovery of the Onyx pen touch reader"

[lib]
name = "onyx_pen_touch_reader"
crate-type = ["cdylib", "rlib"]

[dependencies]
jni.workspace = true
libc.workspace = true
