[package]
name = "onyx-pen-touch-reader"
version = "1.5.4-recovered"
edition = "2021"
license = "LicenseRef-Recovered-From-Binary"
description = "Behavioral Rust recovery of libonyx_pen_touch_reader.so"

[lib]
name = "onyx_pen_touch_reader"
crate-type = ["cdylib", "rlib"]

[dependencies]
jni.workspace = true
libc.workspace = true
