[package]
name = "onyx-pen-touch-reader-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
onyx-pen-touch-reader = { path = ".." }

[[bin]]
name = "pen_manager"
path = "fuzz_targets/pen_manager.rs"
test = false
doc = false
bench = false
